trunk/source/Library-Lethal/src/de/uni_muenster/cs/sev/lethal/parser/treetransducer/TreeTransducerParser.java
/* Generated By:JavaCC: Do not edit this line. TreeTransducerParser.java */
package de.uni_muenster.cs.sev.lethal.parser.treetransducer;

import java.io.ByteArrayInputStream;
import java.util.ArrayList;
import java.util.HashMap;
import de.uni_muenster.cs.sev.lethal.symbol.common.*;
import de.uni_muenster.cs.sev.lethal.symbol.standard.*;
import de.uni_muenster.cs.sev.lethal.states.*;
import de.uni_muenster.cs.sev.lethal.utils.*;
import de.uni_muenster.cs.sev.lethal.tree.common.*;
import de.uni_muenster.cs.sev.lethal.tree.standard.*;
import de.uni_muenster.cs.sev.lethal.factories.*;
import de.uni_muenster.cs.sev.lethal.treetransducer.*;
import java.util.*;

/**
 * Tree transducer parser
 * @author Philipp
 */
public class TreeTransducerParser implements TreeTransducerParserConstants {
        private static TreeTransducerParser parser = new TreeTransducerParser(new ByteArrayInputStream(new byte[]{}));

        public static EasyTT parseString(String s) throws ParseException{
                parser.ReInit(new ByteArrayInputStream(s.getBytes()));
                return parser.treedransducer();
        }

  final public EasyTT treedransducer() throws ParseException {
        EasyTTRule rule;
        EasyTTEpsRule epsRule;
        Set<State> finalStates = new HashSet<State>();
        List<EasyTTRule> rules = new ArrayList<EasyTTRule>();
        List<EasyTTEpsRule> epsRules = new ArrayList<EasyTTEpsRule>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      if (jj_2_1(2)) {
        rule = ttRule(finalStates);
                                                           rules.add(rule);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAME:
          epsRule = ttEpsRule(finalStates);
                                                                                                                 epsRules.add(epsRule);
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LINE_END_COMMENT:
      jj_consume_token(LINE_END_COMMENT);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      jj_consume_token(6);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        if (jj_2_2(2)) {
          rule = ttRule(finalStates);
                                                                           rules.add(rule);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NAME:
            epsRule = ttEpsRule(finalStates);
                                                                                                                                 epsRules.add(epsRule);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LINE_END_COMMENT:
        jj_consume_token(LINE_END_COMMENT);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    }
    jj_consume_token(0);
          {if (true) return new EasyTT(finalStates, rules, epsRules);}
    throw new Error("Missing return statement in function");
  }

  final public EasyTTEpsRule ttEpsRule(Set<State> finalStates) throws ParseException {
        State srcState;
        String varName = null;
        State destState;
        Tree<BiSymbol<RankedSymbol,Variable>> vtree = null;
    srcState = state(finalStates);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      varName = jj_consume_token(NAME).image;
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(8);
    destState = state(finalStates);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 9:
      jj_consume_token(9);
      vtree = tree(Arrays.asList(new String []{varName}));
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                //if (!varName.equals(varName)) throw new ParseException("Variable names in left and right side of rule must match.");

                BiSymbol<RankedSymbol,Variable> var = new LeafSymbol<RankedSymbol,Variable>(varName == null ? new StdVariable(0) : new NamedVariable(varName, 0));

                if (vtree == null){
                        vtree = TreeFactory.getTreeFactory().makeTreeFromSymbol(var);
                }

                {if (true) return new EasyTTEpsRule(srcState, destState ,vtree);}
    throw new Error("Missing return statement in function");
  }

  final public EasyTTRule ttRule(Set<State> finalStates) throws ParseException {
        Triple<RankedSymbol, List<State>, List<String>> func;
        State destState;
        Tree<BiSymbol<RankedSymbol,Variable>> vtree = null;
        Pair<RankedSymbol,Tree<BiSymbol<RankedSymbol,Variable>>> rule;
    func = function(finalStates);
    jj_consume_token(10);
    destState = state(finalStates);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 9:
      jj_consume_token(9);
      vtree = tree(func.getThird());
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
                RankedSymbol symbol = func.getFirst();
                List<State> stateList = func.getSecond();

                if (vtree == null){
                        List<String> varNames = func.getThird();
                        List<Tree<BiSymbol<RankedSymbol,Variable>>> vsubtrees = new ArrayList<Tree<BiSymbol<RankedSymbol,Variable>>>(varNames.size());
                        for (int i = 0; i < varNames.size(); i++){
                                String varName = varNames.get(i);
                                Variable var = (varNames == null) ? new StdVariable(i) : new NamedVariable(varName, i);
                                vsubtrees.add(TreeFactory.getTreeFactory().makeTreeFromSymbol((BiSymbol<RankedSymbol,Variable>)new LeafSymbol<RankedSymbol,Variable>(var)));
                        }
                        vtree = TreeFactory.getTreeFactory().makeTreeFromSymbol((BiSymbol<RankedSymbol,Variable>)new InnerSymbol<RankedSymbol,Variable>(symbol), vsubtrees);
                }

                {if (true) return new EasyTTRule(symbol, stateList, destState, vtree);}
    throw new Error("Missing return statement in function");
  }

  final public Triple<RankedSymbol, List<State>, List<String>> function(Set<State> finalStates) throws ParseException {
        String functionName;
        Pair<State,String> stateVarPair;
        List<State> states = new ArrayList<State>();
        List<String> varNames = new ArrayList<String>();
    functionName = jj_consume_token(NAME).image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        stateVarPair = stateVarPair(finalStates);
                                                          states.add(stateVarPair.getFirst()); varNames.add(stateVarPair.getSecond());
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 9:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_2;
          }
          jj_consume_token(9);
          stateVarPair = stateVarPair(finalStates);
                                                                      states.add(stateVarPair.getFirst()); varNames.add(stateVarPair.getSecond());
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(12);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
                for (int i = 0; i < varNames.size(); i++){
                        if (varNames.lastIndexOf(varNames.get(i)) != i) {if (true) throw new ParseException("Variable names on left side must be unique");}
                }
                RankedSymbol function = new StdNamedRankedSymbol(functionName, states.size());
                {if (true) return new Triple<RankedSymbol, List<State>, List<String>>(function,states, varNames);}
    throw new Error("Missing return statement in function");
  }

  final public Pair<State,String> stateVarPair(Set<State> finalStates) throws ParseException {
        State state;
        String var = null;
    state = state(finalStates);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      var = jj_consume_token(NAME).image;
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
          {if (true) return new Pair<State,String>(state, var);}
    throw new Error("Missing return statement in function");
  }

  final public Tree<BiSymbol<RankedSymbol,Variable>> tree(List<String> variableNames) throws ParseException {
        Tree<BiSymbol<RankedSymbol,Variable>> subtree;
        ArrayList<Tree<BiSymbol<RankedSymbol,Variable>>> subtrees = new ArrayList<Tree<BiSymbol<RankedSymbol,Variable>>>();
        String symbolName;
    symbolName = jj_consume_token(NAME).image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        subtree = tree(variableNames);
                                                       subtrees.add(subtree);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 9:
            ;
            break;
          default:
            jj_la1[14] = jj_gen;
            break label_3;
          }
          jj_consume_token(9);
          subtree = tree(variableNames);
                                                                   subtrees.add(subtree);
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(12);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
                int index = variableNames.indexOf(symbolName);
                if (index != -1){
                        if (subtrees.size() != 0) {if (true) throw new ParseException("Variable Symbols must be leaf nodes");}
                        {if (true) return TreeFactory.getTreeFactory().makeTreeFromSymbol((BiSymbol<RankedSymbol,Variable>)new LeafSymbol<RankedSymbol,Variable>((Variable)new NamedVariable(symbolName, index)));}
                } else {
                        {if (true) return TreeFactory.getTreeFactory().makeTreeFromSymbol((BiSymbol<RankedSymbol,Variable>)new InnerSymbol<RankedSymbol,Variable>(new StdNamedRankedSymbol(symbolName, subtrees.size())), subtrees);}
                }
    throw new Error("Missing return statement in function");
  }

  final public State state(Set<State> finalStates) throws ParseException {
        String name;
        boolean isFinal = false;
    name = jj_consume_token(NAME).image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIN_MARK:
      jj_consume_token(FIN_MARK);
                                        isFinal= true;
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
                State state = StateFactory.getStateFactory().makeState(name);
                if (isFinal) finalStates.add(state);
                {if (true) return state;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3R_4() {
    if (jj_3R_5()) return true;
    if (jj_scan_token(10)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    if (jj_scan_token(NAME)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_6()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_scan_token(11)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public TreeTransducerParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x8,0x8,0x20,0x40,0x8,0x8,0x20,0x80,0x200,0x200,0x200,0x8,0x800,0x80,0x200,0x8,0x800,0x10,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public TreeTransducerParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TreeTransducerParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new TreeTransducerParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public TreeTransducerParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new TreeTransducerParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public TreeTransducerParser(TreeTransducerParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(TreeTransducerParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 18; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 2; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
